[tool.poetry]
name = "streamlit-download-state-session"
version = "0.1.0"
description = ""
authors = ["prmorais <prmorais1302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
taskipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
